fixed overflow

--- a/blocks/place/__photo/place__photo.css
+++ b/blocks/place/__photo/place__photo.css
@@ -1,4 +1,3 @@
 .place__photo{
   width: 100%;
-  border-radius: 10px;
 }
