--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,4 +9,5 @@
   background-color: white;
   color: black;
   border-radius: 10px;
+  overflow: hidden;
 }
